--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,11 +150,9 @@ a
     border-bottom: 0px solid  #79818b ;  
 }
 .creatSujet{
-    background-color: #5ab7bd;     
+    height: 200px;
+    margin-left: 20px;
     border-radius: 10px;
-}
-.creatSujet:hover{
-    background-color: #79c3c8;
 }
 .posts{ 
     width: 80% ;
