--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,9 +150,11 @@ a
     border-bottom: 0px solid  #79818b ;  
 }
 .creatSujet{
-    height: 200px;
-    margin-left: 20px;
+    background-color: #5ab7bd;     
     border-radius: 10px;
+}
+.creatSujet:hover{
+    background-color: #79c3c8;
 }
 .posts{ 
     width: 80% ;
