--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,11 +114,13 @@ a
     height: 100px ;
     border-bottom: 1px solid  #79818b ;   
     display: flex ;
+    padding-left: 20px;
     align-items: center ;
 }
 .dernierPost{
     height: 50px ;
     display: flex ;
+    padding-left: 20px;
     align-items: center ;
 }
 .dernierPost:hover{
@@ -131,6 +133,7 @@ a
 .titre
 {    
     width: 100% ;
+    margin-left: 20px ;
     height: 40px ; 
     padding-bottom: 20px ;   
 }
@@ -164,6 +167,7 @@ a
 .post {
     min-height: 40px ;
     min-width: 400px ;
+    padding-left: 20px;
     border: 1px solid  #79818b ;
 }
 .titre h2{
