--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,8 +184,9 @@ a
     background-color: #5db5a4 ;
     margin-top: 2px;
 }
-.recher{
-
+.recherche{
+    margin-top: 30px;
+    margin-left: 20px;
 }
 .pied
 {
@@ -231,7 +232,27 @@ input{
     letter-spacing: 2px;
         
 }
-
+.avatar {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.mail{
+    
+    margin-left:  20px;
+    
+    
+}
+.elcontact
+{
+    padding: 20px;
+    width: 250px ;
+    height: 300px ;
+    margin: 2px 10px 0px 5px ;
+    box-shadow: 0px 3px 1px 0px rgba(145, 127, 127, 1);
+    background-color: #5ab7bd;
+}
 
 
 
