--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-
+    
 body{
 
     margin: 0;
@@ -10,19 +10,202 @@ body{
     display: flex ;
     align-content: flex-start ;
     flex-wrap: wrap ;
-    background-color: #ececea ;
-
 }
 
 .tete
-{
-
+{   
     width: 100% ;
-    height: 80px ;
+    height: 100px ;
     display: flex ;
-    background-color: #3c989e ;
+    align-items:  center ;
 }
-.accueille
+.logo {
+    width: 50% ;
+}
+.tete a {
+
+    margin-top: 30px ;
+    margin-left: 15px;
+}
+.recherche {
+    width: 50% ;
+    display: flex ;
+    justify-content: flex-end ;
+    margin-right: 20px ;
+}
+.recherche input {
+    width: 300px ;
+    height: 25px ;
+    border-radius: 10px ;
+
+}
+.nav1
+{
+    width: 25% ;
+    min-height: 90vh ;
+    display: flex ;
+    flex-wrap: wrap ;
+    align-content: flex-start ;
+    background-color: #34495E ;
+}
+.nav1Bbo1{
+    width: 100% ;
+    height: 40%;
+    display: flex ;
+    flex-wrap: wrap ;
+    align-content: flex-start ;
+    justify-content: center ;
+}
+.profil{
+    width: 90% ;
+    height: 60%;
+    border-bottom: 2px solid #999999;
+}
+.conect{
+    width: 90% ;
+    height: 40%;
+    display: flex ;
+    align-items: center ;
+    justify-content: space-around ;
+
+}
+.accueille3 {
+    width: 120px ;
+    height: 25px ;
+    border: 1px solid #999999;
+    border-radius: 10px ;
+}
+.accueille3 a {
+    display: block ;
+    color: #cccccc;
+    margin-left: 20px;
+    margin-top: 2px ;
+    text-decoration: none
+}
+.nav1Bbo2{
+    width: 100% ;
+    height: 60%;
+    display: flex ;
+    flex-direction: column ;
+    align-items: center;
+}
+.nav1Bbo2 a {
+    color: #cccccc;
+    text-decoration: none
+}
+.boutonvan1
+{
+    margin-top: 10px ;
+    height: 70px;
+    width: 85% ;
+    border-bottom: 2px solid #999999;
+}
+.boutonvan1 a {
+    display: block ;
+    margin-left: 20px;
+    margin-top: 30px;
+}
+.nav2
+{
+    width: 75% ;
+    display: flex ;
+    flex-wrap: wrap ;
+    align-content: flex-start ;
+}
+
+.bar1
+{   width: 98% ; 
+    height: 70px ;
+    margin-left: 8px ;
+    background-color: #E6E6E6 ;        
+}
+.corpPrincipal{
+    display: flex ;
+    flex-wrap: wrap ;
+    align-content: flex-start ;
+    width: 100% ;
+    min-height: 80vh ;
+}
+.corpConten{
+    width: 220px ;
+    height: 280px ;
+    margin-top: 40px ;
+    margin-left: 60px ;
+    display: flex ;
+    flex-wrap: wrap ;
+    justify-content: center ;
+    align-content: flex-start ;
+    background-color: #E6E6E6 ;
+}
+.corpConten a{
+    color: #5e5e5e;
+    text-decoration: none ; 
+}
+.nomSoucategory {   
+    border-bottom: 2px solid #999999;
+    width: 90% ;
+    height: 60% ;
+}
+.descriptionSoucat {
+
+    width: 90% ;
+    height: 40% ;
+}
+
+.titre
+{    
+    width: 100% ;
+    margin-left: 20px ;
+    height: 40px ; 
+    padding-bottom: 20px ;   
+}
+.nonCategory {
+    display: block ;
+    margin-top: 70% ;
+}
+.descriptionCategory{
+    display: block ;
+    margin-top: 10px ;
+}
+
+.posts{ 
+    width: 80% ;
+    display: flex ;
+    flex-direction: column ;   
+    align-content:   center ;
+    margin: auto ;
+}
+.post {
+    min-height: 40px ;
+    min-width: 400px ;
+    padding-left: 20px;
+    border: 1px solid  #79818b ;
+}
+.sujet{
+    width: 99% ;
+    margin: auto ;
+    height: 40px ;  
+    display: flex ;
+    justify-content: center ;
+    align-items: center ;
+    flex-wrap: wrap ;
+    border-bottom: 2px solid   #79818b ;  
+    background-color: #E4E0E0;
+    margin-bottom: 5px;
+}
+.sujet:hover{
+    border-bottom: 0px solid  #79818b ;  
+}
+.creatSujet{
+    height: 200px;
+    margin-left: 20px;
+    border-radius: 10px;
+}
+a{
+    text-decoration: none ; 
+}
+
+/*.accueille
 {
     display: flex ;
     align-items: center ;
@@ -69,35 +252,9 @@ a
     margin-right: 40px;
 }
 
-.nav1
-{
-    width: 15% ;
-    display: flex ;
-    flex-direction: column ;
-    align-items: center ;
-    margin-top: 2px ;
-    background-color: #5db5a4 ;
-}
-.boutonvan1
-{
-    display: flex ;
-    align-items: center ;
-    justify-content: center;
-    height: 40px;
-    width: 100px ;
-    border-radius : 5px;
-    border-radius : 15px;
-    background: #3c989e ;
-    margin-top: 20px ;
-}
-.corp
-{
-    width: 70% ;
-    min-height: 90vh ;
-    display: flex ;
-    flex-wrap: wrap ;
-    align-content: flex-start ;
-}
+
+
+
 .corp a{
     color: #454c5b ;
 }
@@ -137,39 +294,8 @@ a
     height: 40px ; 
     padding-bottom: 20px ;   
 }
-.sujet{
-    width: 99% ;
-    margin: auto ;
-    height: 40px ;  
-    display: flex ;
-    justify-content: center ;
-    align-items: center ;
-    flex-wrap: wrap ;
-    border-bottom: 2px solid   #79818b ;  
-    background-color: #5ab7bd;
-    margin-bottom: 5px;
-}
-.sujet:hover{
-    border-bottom: 0px solid  #79818b ;  
-}
-.creatSujet{
-    height: 200px;
-    margin-left: 20px;
-    border-radius: 10px;
-}
-.posts{ 
-    width: 80% ;
-    display: flex ;
-    flex-direction: column ;   
-    align-content:   center ;
-    margin: auto ;
-}
-.post {
-    min-height: 40px ;
-    min-width: 400px ;
-    padding-left: 20px;
-    border: 1px solid  #79818b ;
-}
+
+
 .titre h2{
     color: #24272e ;
     font-size: 1.3em ;
@@ -180,12 +306,7 @@ a
     font-size: 1em ;
     font-weight: normal;
 } 
-.nav2
-{
-    width: 15% ;          
-    background-color: #5db5a4 ;
-    margin-top: 2px;
-}
+
 .recher{
 
 }
@@ -208,7 +329,7 @@ a
     height:15px; 
     margin-left: 20px ;
 
-}
+}*/
 
 
 
