--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,6 @@ body{
     display: flex ;
     flex-wrap: wrap ;
     align-content: flex-start ;
-    background-color: #34495E ;
 }
 .nav1Bbo1{
     width: 100% ;
@@ -55,6 +54,7 @@ body{
     flex-wrap: wrap ;
     align-content: flex-start ;
     justify-content: center ;
+    background-color: #34495E ;
 }
 .profil{
     width: 90% ;
@@ -83,11 +83,13 @@ body{
     text-decoration: none
 }
 .nav1Bbo2{
+    margin-top: 2px ;
     width: 100% ;
     height: 60%;
     display: flex ;
     flex-direction: column ;
     align-items: center;
+    background-color: #34495E ;
 }
 .nav1Bbo2 a {
     color: #cccccc;
