--- a/public/css/style.css
+++ b/public/css/style.css
@@ -223,7 +223,7 @@ input{
     margin-left: 20px ;
 }
 .bt2{
-    background-color: lightgreen;
+    background-color: lightgoldenrodyellow;
     justify-content: center;
     height: 40px;
     width: 100px ;
@@ -250,8 +250,8 @@ input{
     width: 250px ;
     height: 300px ;
     margin: 2px 10px 0px 5px ;
-    box-shadow: 0px 3px 1px 0px #000033;
-    background-color: lightyellow;
+    box-shadow: 0px 3px 1px 0px rgba(145, 127, 127, 1);
+    background-color: #5ab7bd;
 }
 
 
